package org.example;

public interface IComboBox {
    void create();
}
